--- a/src/resources/src/less/temp.less
+++ b/src/resources/src/less/temp.less
@@ -150,3 +150,16 @@ ul.has-many-uniquely li a.edit {
 p.help-block{
   color: #aaa;
 }
+
+
+/* DESKTOP - Stop the forms going too long */
+
+
+@media screen {
+  @media (min-width: 993px) {
+
+    .form-control{
+      width: 60%;
+    }
+  }
+}
